UD-867 avoid scrollbar on iframe

--- a/src/app/ide/ide-iframe/ide-iframe.styl
+++ b/src/app/ide/ide-iframe/ide-iframe.styl
@@ -20,3 +20,4 @@ ide-iframe#ide-iframe-window.ng-hide
   left 0
   z-index 60
   opacity 1
+  overflow hidden
